# Cetus-Swap-Assistant

./: .gitignore  AI_DISCLOSURE.md  AI_USAGE.md  AI_USAGE_DISCLOSURE.md  CETUS_INTEGRATION.md  DEPLOY_CHECKLIST.md  README.md  SUBMISSION.md  ZKLOGIN_GUIDE.md  docker-compose.yml  railway.json
.claude/: settings.local.json
.trae/documents/: plan_20260204_031217.md  plan_20260204_055434.md  plan_20260204_060828.md
backend/: .env.example  Cargo.toml  docker-compose.yml  schema.sql
backend/src/: auth.rs  indexer.rs  main.rs
contracts/cetus_swap/: Move.toml  Published.toml
contracts/cetus_swap/sources/: swap_helper.move
contracts/suipay/: Move.toml
contracts/suipay/sources/: payment.move
docs/: DEMO_RUNBOOK.md  SUBMISSION_CHECKLIST.md
docs/assets/: README.md
frontend/: .env.local.example  DEPLOY.md  Dockerfile  next.config.ts  package-lock.json  package.json
frontend/scripts/: find_pool.ts  find_sui_usdc.ts  inspect_packages.ts  verify_atomic_zap.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/src/app/payroll/: page.tsx
frontend/src/app/treasury/: page.tsx
frontend/src/components/: AIInsightCard.tsx  PriceChart.tsx  ReviewModal.tsx  SuccessModal.tsx  SwapHistory.tsx  TokenInput.tsx  TradingCard.tsx  TradingLeaderboard.tsx  TransactionStepper.tsx  YieldBadge.tsx
frontend/src/hooks/: useTokens.ts
frontend/src/utils/: aiInsights.ts  cetus.ts  config.ts  errors.ts  preflight.ts  quoteService.ts  retry.ts  rpc.ts  storage.ts  tradeStats.ts  zklogin.ts
frontend/src/utils/cetus/: history.ts  sdk.ts  tx-builder.ts
(+8 files in other folders)
