[package]
name = "suipay_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "uuid"] }
tower-http = { version = "0.5", features = ["cors"] }
dotenv = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.0", features = ["serde", "v4"] }
reqwest = { version = "0.11", features = ["json"] }
jsonwebtoken = "9.2"
chrono = "0.4"
axum-extra = { version = "0.9", features = ["typed-header"] }
headers = "0.4"
# 用于 zkLogin 的地址计算和加密
anyhow = "1.0"
base64 = "0.21"